--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "dataurl-file",
   "description": "Convert to and from dataurl",
   "private": false,
-  "version": "0.2.1",
-  "files": ["dist"],
+  "version": "0.2.2",
+  "files": ["dist", "global.d.ts"],
   "type": "module",
   "main": "./dist/dataurl-file.umd.cjs",
   "module": "./dist/dataurl-file.js",
